# mirrorlane

./: .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  Cargo.toml  PROJECT.md  README.md  demo.sh  deny.toml
.github/workflows/: rust.yml
crates/mirrorlane-cli/: Cargo.toml
crates/mirrorlane-cli/examples/: durable_replay.rs  github_ingest.rs  message_projection.rs  replay.rs  routing.rs  session_scope.rs  session_warmup.rs
crates/mirrorlane-cli/src/: broker.rs  commands.rs  main.rs
crates/mirrorlane-core/: Cargo.toml
crates/mirrorlane-core/src/: cache.rs  derivation.rs  lib.rs  message.rs  message_log.rs  projection.rs  projector.rs  routing.rs  scope.rs  skill.rs  store.rs  warmup.rs
crates/mirrorlane-github/: Cargo.toml
crates/mirrorlane-github/src/: consumer.rs  lib.rs  model.rs  rest.rs  source.rs
crates/mirrorlane-llm/: Cargo.toml
crates/mirrorlane-llm/src/: lib.rs
crates/mirrorlane-ollama/: Cargo.toml
crates/mirrorlane-ollama/src/: lib.rs
crates/mirrorlane-openai/: Cargo.toml
crates/mirrorlane-openai/src/: lib.rs
crates/mirrorlane-provider/: Cargo.toml
crates/mirrorlane-provider/src/: caching.rs  developer.rs  hint.rs  lib.rs  mock.rs  routing.rs  scope.rs  skill.rs  warmup.rs
crates/mirrorlane-runtime/: Cargo.toml
crates/mirrorlane-runtime/src/: cache.rs  lib.rs  step.rs
crates/mirrorlane-storage/: Cargo.toml
crates/mirrorlane-storage/src/: lib.rs  sqlite_common.rs  sqlite_derived_output_cache.rs  sqlite_message_store.rs  sqlite_projection_cache.rs  sqlite_routing_trace_store.rs
crates/mirrorlane-storage/tests/: recovery.rs
crates/mirrorlane-worker/: Cargo.toml
crates/mirrorlane-worker/src/: composition.rs  dead_letters.rs  derived.rs  lib.rs  observer.rs  registry.rs  replay.rs  routed_work.rs  strategy.rs  submission.rs  test_support.rs
docs/: architecture.md
openspec/: config.yaml
openspec/specs/mirrorlane/: spec.md
