[package]
name = "mirrorlane-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Mirrorlane command-line interface."

[[bin]]
name = "mirrorlane"
path = "src/main.rs"

[dependencies]
mirrorlane-core.workspace = true
mirrorlane-provider.workspace = true
mirrorlane-llm.workspace = true
mirrorlane-ollama.workspace = true
mirrorlane-openai.workspace = true
mirrorlane-github.workspace = true
mirrorlane-storage.workspace = true
mirrorlane-worker.workspace = true
worklane.workspace = true
worklane-core.workspace = true
worklane-sqlite.workspace = true
worklane-postgres.workspace = true
worklane-redis.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
# For the top-level examples hosted here (e.g. the in-memory broker in
# durable_replay/replay); the product code uses the durable Sqlite broker.
worklane-memory.workspace = true
tempfile = "3"
