[package]
name = "mirrorlane-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Mirrorlane domain model: message, projection, scope, skill, warm-up, routing."

[dependencies]
mirrorlane-runtime.workspace = true
serde.workspace = true
async-trait.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
