[package]
name = "mirrorlane-github"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Mirrorlane GitHub source: maps issues, PRs, and comments into the message log."

[dependencies]
mirrorlane-core.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio.workspace = true
