[package]
name = "mirrorlane-openai"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Mirrorlane OpenAI-compatible LlmClient (chat-completions, JSON mode)."

[dependencies]
mirrorlane-llm.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
